add /change-actor-field and some tests
